feat: move Base

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SECRET_KEY=mysecretkey
-SQLALCHEMY_DATABASE_URL=mysql+pymysql://root:toor@localhost/dekadev
+SQLALCHEMY_DATABASE_URL=mysql+pymysql://root:toor@localhost/ais_db
